# mini-ops-openenv

./: Dockerfile  README.md  app.py  client.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml
mini-ops-openenv/: Dockerfile  README.md  app.py  env.py  graders.py  models.py
mini-ops-openenv/mini_ops_env_final/mini_ops_env/: Dockerfile  baseline.py  inference.py  openenv.yaml  pyproject.toml
server/: app.py
